[tool.poetry]
name = "sizemeup"
version = "1.3.0"
description = "A simple tool to determine the genome size of an organism"
authors = [
    "Robert A. Petit III <robbie.petit@gmail.com>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rpetit3/sizemeup"
repository = "https://github.com/rpetit3/sizemeup"
keywords = ["bioinformatics", "genome size"]

[tool.poetry.scripts]
sizemeup = "sizemeup.cli.sizemeup:main"
sizemeup-build = "sizemeup.cli.build:main"

[tool.poetry.dependencies]
python = "^3.8.1"
rich = "^13.7.1"
rich-click = "^1.7.4"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
executor = "^23.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^24.4.0"
bactopia = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
